--- a/templates/school-of-leaders.twig
+++ b/templates/school-of-leaders.twig
@@ -32,10 +32,9 @@
 {% endblock head %}
 
 {% block content %}
-<h2 class="page-title">School of Leader Schedule</h2>
+<h2 class="page-title">School of Leaders Schedule</h2>
 <p><strong>When: </strong>3rd Saturday of the Month</p>
 <p><strong>Where: </strong>Holy Name of Jesus<br />
-Religious Ed Building (Rm. 3/5) <br />
 1300 Valparaiso Blvd <br />
 Niceville, FL 32578 <br />
 <a target="_blank" href="">Directions</a>
