--- a/templates/school-of-leaders.twig
+++ b/templates/school-of-leaders.twig
@@ -33,15 +33,15 @@
 
 {% block content %}
 <h2 class="page-title">School of Leaders Schedule</h2>
-<p><strong>When: </strong>3rd Saturday of the Month</p>
-<p><strong>Where: </strong>Holy Name of Jesus<br />
+<p><strong>When: </strong>3rd Saturday of the Month</p><br />
+<p><strong>For Months of February, March, May, June, August, September, & November: </strong>Meetings will be held at Holy Name of Jesus<br />
 1300 Valparaiso Blvd <br />
 Niceville, FL 32578 <br />
 <a target="_blank" href="">Directions</a>
 </p><br />
-<p><strong>For Months of April, July, & October: </strong>Meetings will be held at St. Joseph the Worker<br />
+<p><strong>For Months of January, April, July, & October: </strong>Meetings will be held at St. Joseph the Worker<br />
 1664 Main St. (FL-77) <br />
-Chipley, FL 32438</p>
+Chipley, FL 32438</p><br />
 <p><strong>December: </strong>No Meeting</p>
 <h3 class="map-dir">Map (Click Pin For Directions to St. Joseph the Worker)</h3>
 <div id="map-canvas"></div>
